# pytracer

./: .cvsignore  .gitignore  .pre-commit-config.yaml  ChangeLog  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  NEWS  NEWS.md  ProjectHome.md  README.rst  README.txt  VERSION.py  __init__.py  __pkginfo__.py  dbgcore.py  pyproject.toml  pyrightconfig.json  setup-python-2.4.sh  setup-python-3.0.sh  setup-python-3.3.sh  setup.cfg  setup.py  svn2cl_usermap  tracer.py
.circleci/: config.yml
admin-tools/: check-2.4-2.7-versions.sh  check-3.0-3.2-versions.sh  check-3.6-3.11-versions.sh  check-newest-versions.sh  make-dist-2.4-2.7.sh  make-dist-3.0-3.2.sh  make-dist-3.3-3.5.sh  make-dist-3.6-3.10.sh  make-dist-newest.sh  merge-for-2.4.sh  merge-for-3.0.sh  merge-for-3.2.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-3.6-3.11-versions  pyenv-newest-versions  setup-master.sh  setup-python-2.4.sh  setup-python-3.0.sh  setup-python-3.2.sh  setup-python-3.3.sh  setup-python-3.6.sh
examples/: 00_step_one_basic_block.py  01_step_out_one_basic_block.py  02_step_single_loop.py  03_step_iterator_exit.py  04_step_index_error.py  05_step_out_with_index_error.py  06_step_into_try_with_try_except.py  06_step_try_except.py  07_step_out_with_try_except.py  08_step_simple_nested_call.py  09_step_simple_generator.py  10_call_raising_exception.py  11_double_call_with_exception.py  12_double_call_step_out_with_exception.py  12_step_into_long_import.py  12_step_over_long_import.py  13_step_into_long_import.py  14_step_over_long_import.py  step_index_error.py  step_inline.py  step_one_basic_block.py  step_simple_nested_call.py  step_single_loop.py  step_try_except.py
src/: __init__.py  tracefilter.py  tracer.py
test/: basic.py  test-add-hook.py  test-basic.py  test-remove.py  test_add_hook.py  test_filter.py  test_remove.py  (+3 more)
(+18 files in other folders)
