[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rocky@gnu.org"},
]

name = "tracer"
description = "Centralized sys.settrace management"
dependencies = []
readme = "README.rst"
license = {text = "GPL"}
keywords = ["debugger", "profiling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 2.4",
    "Programming Language :: Python :: 2.5",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rocky/pytracer"
Downloads = "https://github.com/rocky/pytracer/releases"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

# [project.scripts]
# pydisasm = "xdis.bin.pydisasm:main"

[tool.setuptools.dynamic]
version = {attr = "tracer.version.__version__"}
